VM 8.1.1-devo

  IMPROVEMENTS:

  * vm-quit-no-change offers to delete the auto-save file if there is
    one.  (This wasn't getting done due to a bug in FSF Emacs.)

  * vm-delete-duplicate-messages now works by comparing message ID's.
    (from Noah Friedman's vm-addons).

  * New boolean variable vm-sort-threads-by-youngest-date allows
    threads to be sorted by their youngest date or oldest date.

  * vm-yank-message function streamlined a bit.  New variable
    vm-include-text-from-presentation used to extract message text
    from presentation buffer.

VM 8.1.0

  VM is currently being maintained by a 'VM development team'
  consisting of Robert Widhopf-Fenk, Ulrich Mueller and Uday S Reddy.
  We continue to look for more volunteers to help with the
  maintenance.

  The version 8.1 released here has been under development for more
  than 2 years.  It was held back by Robert Fenk getting busy towards
  the end of 2008 and a long period of interregnum.  Hopefully, we
  have that behind us.  This version has major improvements on various
  fronts, especially for imap-folders.  Please read the details
  below. 

  Bug reports should be sent by using M-x vm-submit-bug-report.  Enjoy
  using VM! - Rob, Ulrich and Uday
  

  IMPROVEMENTS:

    * The variable vm-mime-yank-attachments is set to nil by default,
      so that we are not surprised by unexpectedly large mail messages.

    * The variable vm-mime-require-mime-version-header is set to nil
      by default, so that we will be tolerant of bad MIME senders.

    * Allow for sorting the headers of composition buffers by calling the
      function `vm-reorder-message-headers' interactively.  You may configure
      the order by the new variable `vm-mail-header-order'.  This can be
      useful if some broken MUAs (e.g. Tobit) mess up the messages due to the
      header order.

    * Added hiding and protection of headers in composition buffers.  See the